[gd_scene load_steps=5 format=3 uid="uid://jkcja3o4nasp"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_2ff2u"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7j1o4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xjs7c"]
albedo_color = Color(0.996094, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vvxvf"]
material = SubResource("StandardMaterial3D_xjs7c")

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
script = ExtResource("1_2ff2u")
hoverSpeed = 3.0
hoverAmplitude = 0.3

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7j1o4")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 5.0
path_height_offset = 0.1
avoidance_enabled = true
radius = 5.0
neighbor_distance = 5.0
use_3d_avoidance = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_vvxvf")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
